# PD4-CPP

./: CMakeLists.txt  Election.cpp  Election.h  d_hondt.cpp  d_hondt.h  main.cpp  mainwindow.cpp  mainwindow.h  party.cpp  party.h
